# faker-stalker-names

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
faker_stalker_names/: __init__.py
faker_stalker_names/de_DE/: __init__.py  data.py
faker_stalker_names/en_US/: __init__.py  data.py
faker_stalker_names/es_ES/: __init__.py  data.py
faker_stalker_names/fr_FR/: __init__.py  data.py
faker_stalker_names/it_IT/: __init__.py  data.py
faker_stalker_names/pl_PL/: __init__.py  data.py
faker_stalker_names/ru_RU/: __init__.py  data.py
faker_stalker_names/uk_UA/: __init__.py  data.py
tests/: test_data.py  test_provider.py
