[tool.poetry]
name = "faker-stalker-names"
version = "0.1.1"
description = "Faker provider with stalker names."
authors = ["Grigory Bukovsky <booqoffsky@yandex.ru>"]
readme = 'README.md'
repository = 'https://github.com/booqoffsky/faker-stalker-names'
keywords = ['faker', 'fun', 'stalker', 'provider']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^13.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
