[tool.poetry]
name = "faker-stalker-names"
version = "0.1.3"
description = "Faker provider to generate stalker names."
authors = ["Grigory Bukovsky <booqoffsky@yandex.ru>"]
readme = 'README.md'
license = "MIT"
repository = 'https://github.com/booqoffsky/faker-stalker-names'
keywords = ['faker', 'fun', 'stalker', 'provider', 'generator']

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
Faker = "^13.15.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
